# sovd-token-helper

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
scripts/: gen-workshop-pki.sh
src/: main.rs
